kasten/k10-3-2-1-backup/k10-3-2-1-backup.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: k10-3-2-1-backup-policy
  annotations:
    policies.kyverno.io/title: Check 3-2-1 Backup Policy
    policies.kyverno.io/category: Kasten K10 by Veeam
    policies.kyverno.io/subject: Policy
    policies.kyverno.io/description: >-
      The rule of 3-2-1 recommends that you have at least 3 copies of data, on 2 different storage targets, and 1 being "offsite"
      In K8s/K10, this translates to the original StatefulSet (the original PersistentVolumeClaim), a backup (a snapshot of the PVC),
      and an export to cloud object storage (a cloud copy of the PVC snapshot).
spec:
  validationFailureAction: audit  
  rules:
  - name: k10-3-2-1-backup-policy
    match:
      resources:
          kinds:
          - config.kio.kasten.io/v1alpha1/Policy
    validate:
      message: "The rule of 3-2-1 recommends you have 'action: backup' followed by an 'action: export' defined in the backup Policy."
      deny:
        conditions:
          all:
          - key:
            - backup
            - export
            operator: AllNotIn
            value: "{{ request.object.spec.actions[].action }}"
