kasten/k10-3-2-1-backup/.chainsaw-test/chainsaw-step-01-assert-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: k10-3-2-1-backup-policy
status:
  ready: true
